--- a/about.html
+++ b/about.html
@@ -4,17 +4,13 @@
       <!-- Meta -->
       <title>About</title>
       <meta charset="UTF-8">
-      <meta name="description" content="Free HTML template">
-      <meta name="keywords" content="HTML, template, free">
-      <meta name="author" content="Nicola Tolin">
+      <meta name="author" content="Desmond Acheampong">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- Styles -->
       <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
       <link href="vendor/animate/animate.css" rel="stylesheet" type="text/css"/>
       <link href="css/gstyle.css" rel="stylesheet" type="text/css"/>
    </head>
    <body>
-      <!-- Navbar -->
       <div class="navigation container-fluid">
          <div class="row justify-content-md-center ">
             <div class="col-md-10 col-sm-12">
@@ -40,8 +36,6 @@
             </div>
          </div>
       </div>
-      <!-- End Navbar -->
-      <!-- Products -->
       <div class="container-fluid products-2">
          <div class="row justify-content-md-center ">
             <div class="col-md-10 col-sm-12">
@@ -60,8 +54,6 @@
             </div>
          </div>
       </div>
-      <!-- End Products -->
-      <!-- Additional -->
       <div class="container additional">
          <div class="row">
             <div class="col-xl-4">
@@ -75,8 +67,6 @@
             </div>
          </div>
       </div>
-      <!-- End Additional -->
-      <!-- Footer -->
       <div class="container-fluid footer ">
          <div class="row">
             <div class="col-xl-2 col-md-8 offset-md-1 col-sm-12 ">
@@ -98,8 +88,6 @@
             </div>
          </div>
       </div>
-      <!-- End Footer -->
-      <!-- Javascript -->
       <script src="vendor/jquery.min.js"></script>
       <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
       <script src="vendor/wow/wow.js"></script>
@@ -107,6 +95,5 @@
       <script>
          new WOW().init();
       </script>
-      <!-- End Javascript -->
    </body>
 </html>
