--- a/gallery.html
+++ b/gallery.html
@@ -207,6 +207,23 @@
          </div>
       </div>
       <!-- End Gallery -->
+      <!-- Upload Section -->
+      <div class="container mt-5">
+         <h3>Upload an Image</h3>
+         <form action="upload.php" method="POST" enctype="multipart/form-data">
+            <input type="file" name="image" accept="image/*" required>
+            <button type="submit" class="btn btn-primary mt-2">Upload</button>
+         </form>
+      </div>
+      
+      <!-- Image Gallery with Likes -->
+      <div class="container mt-5">
+         <h3>Gallery</h3>
+         <div class="row" id="gallery">
+            <!-- Images will be dynamically loaded here -->
+         </div>
+      </div>
+
       <!-- Footer -->
       <div class="container-fluid footer ">
          <div class="row">
