--- a/contacts.html
+++ b/contacts.html
@@ -4,9 +4,6 @@
       <!-- Meta -->
       <title>Contacts</title>
       <meta charset="UTF-8">
-      <meta name="description" content="Free HTML template">
-      <meta name="keywords" content="HTML, template, free">
-      <meta name="author" content="Nicola Tolin">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- Styles -->
       <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
@@ -79,25 +76,25 @@
                         <div class="row">
                            <div class="col-md-12">
                               <div class="md-form form-group">
-                                 <input type="text" class="form-control" placeholder="Name*">
+                                 <input type="text" class="form-control" placeholder="Name*" style="font-family: VT323">
                               </div>
                            </div>
                         </div>
                         <div class="row">
                            <div class="col-md-12">
                               <div class="md-form form-group">
-                                 <input type="text" class="form-control" placeholder="Address*">
+                                 <input type="text" class="form-control" placeholder="Address*" style="font-family: VT323">
                               </div>
                            </div>
                         </div>
                         <div class="row">
                            <div class="col-md-12">
                               <div class="md-form form-group">
-                                 <textarea rows="10" cols="50" class="form-control" placeholder="Your Message*"></textarea>
+                                 <textarea rows="10" cols="50" class="form-control" placeholder="Your Message*" style="font-family: VT323"></textarea>
                               </div>
                            </div>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-md">Send</button>
+                        <button type="submit" class="btn btn-primary btn-md" style="font-family: VT323">Send</button>
                      </form>
                   </div>
                </div>
