--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
     
       <!-- logo -->
       <br>
-      <div class="draggable three" id="div3"><a href="#"><img src="img/LOGO.png"></a></div>
+      <div class="draggable three" id="div3"><a href="psnq.html"><img src="img/LOGO.png"></a></div>
       <!-- last folder -->
       <div class="draggable four" id="div4"><a href="gallery.html"><img src="img/folder1.png"></a></div>
     </div>
