--- a/psnq.html
+++ b/psnq.html
@@ -21,7 +21,21 @@
     </header>
     <hr>
     <div class="container1">
-      
+      <div class="row">
+        <div class="col-5">
+          <img src="/img/11.jpg" alt="" class="main">
+        </div>
+        <div class="col-7">
+          <h4>floral crochet tunic top</h4>
+          <h3 class="price">$2.40</h3>
+          <h3>Details</h3>
+          <p class="details">
+
+          </p>
+          <button class="addToCart" aria-placeholder="Add to Cart"></button>
+          <button class="addToWishList" aria-placeholder="Add to Wish-List"></button>
+        </div>
+      </div>
     </div>
     <footer>
       
