--- a/psnq.html
+++ b/psnq.html
@@ -21,20 +21,19 @@
     </header>
     <hr>
     <div class="container1">
-      <div class="row">
-        <div class="col-5">
-          <img src="/img/11.jpg" alt="" class="main">
-        </div>
-        <div class="col-7">
-          <h4>floral crochet tunic top</h4>
-          <h3 class="price">$2.40</h3>
-          <h3>Details</h3>
-          <p class="details">
-
-          </p>
-          <button class="addToCart" aria-placeholder="Add to Cart"></button>
-          <button class="addToWishList" aria-placeholder="Add to Wish-List"></button>
-        </div>
+      <div class="sub-text">
+        <h4>Subscribe to better deals</h4>
+        <p>Get the latest news on bargains and discounts</p>
+        <table>
+          <tr>
+            <td><input type="text" placeholder="First Name"></td>
+            <td><input type="text" placeholder="Last Name"></td>
+          </tr>
+          <tr>
+            <td><input type="text" placeholder="e-mail"></td>
+            <td><button>subscribe</button></td>
+          </tr>
+        </table>
       </div>
     </div>
     <footer>
