--- a/psnq.html
+++ b/psnq.html
@@ -21,6 +21,17 @@
     </header>
     <hr>
     <div class="container1">
+      <div class="row">
+        <div class="col-9">
+          <img src="img/IMG-20250211-WA0001.jpg" alt="">
+        </div>
+        <div class="col-3">
+
+        </div>
+      </div>
+    </div>
+    <hr>
+    <div class="container4">
       <div class="sub-text">
         <h4>Subscribe to better deals</h4>
         <p>Get the latest news on bargains and discounts</p>
