--- a/checkout.html
+++ b/checkout.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1><a href="/main.html">Checkout</a></h1>
+        <h1><a href="/root.html">Checkout</a></h1>
     </header>
     <div class="container">
         <section class="order-details">
