--- a/psnq.html
+++ b/psnq.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="main.html"><img src="img/LOGOO.png" alt="logo" class="logo"></a>
+        <a href="root.html"><img src="img/LOGOO.png" alt="logo" class="logo"></a>
         <ul>
           <li><a href="shop.html" class="links">shop</a></li>
           <li><a href="contacts.html" class="links">contact</a></li>
