--- a/story.html
+++ b/story.html
@@ -18,7 +18,7 @@
          <div class="row justify-content-md-center ">
             <div class="col-md-10 col-sm-12">
                <nav class="navbar navbar-default">
-                  <a class="navbar-brand" href="main.html">
+                  <a class="navbar-brand" href="root.html">
                   <img src="img/LOGOO.png" height="22" alt="Logo">
                   </a>
                   <div class="button_container" id="toggle">
