--- a/shop.html
+++ b/shop.html
@@ -27,7 +27,7 @@
     <header>
         <!-- Nav -->
         <div class="nav container">
-            <a href="main.html" class="logo"><img src="img/LOGOO.png" alt=""></a>
+            <a href="root.html" class="logo"><img src="img/LOGOO.png" alt=""></a>
             <!-- Cart-Icon -->
             <i class='bx bx-shopping-bag' id="cart-icon"></i>
             <!-- Cart -->
