Changes to be committed: 	modified:   README.md 	renamed:    css/style.css -> css/root.css 	modified:   root.html

--- a/root.html
+++ b/root.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/root.css">
     <link rel="stylesheet" type="text/css" href="css/rows.css">
     <link rel="stylesheet" type="text/css" href="css/media_queries.css">
     <meta charset="utf-8">
