--- a/psnq.html
+++ b/psnq.html
@@ -21,17 +21,26 @@
     </header>
     <hr>
     <div class="container1">
-      <div class="row">
-        <div class="col-9">
-          <img src="img/IMG-20250211-WA0001.jpg" alt="">
+      <div class="part1">
+        <div class="main-img">
+          <img src="/img/09.jpg" alt="">
         </div>
-        <div class="col-3">
-
+        <div class="list-img">
+          <img src="" alt="">
+          <img src="" alt="">
+          <img src="" alt="">
+          <img src="" alt="">
         </div>
+      </div>
+      <div class="part2">
+        <p></p>
+        <h4>FLORAL CROCHET TUNIC TOP-L</h4>
+        <h6>$20.00</h6>
+        
       </div>
     </div>
     <hr>
-    <div class="container4">
+    <div class="container2">
       <div class="sub-text">
         <h4>Subscribe to better deals</h4>
         <p>Get the latest news on bargains and discounts</p>
