html for psnq.html

--- a/psnq.html
+++ b/psnq.html
@@ -41,6 +41,32 @@
     </div>
     <hr>
     <div class="container2">
+      <div class="part1">
+        <h4>YOU MIGHT LIKE...</h4>
+        <div class="item-1"></div>
+        <div class="item-2"></div>
+        <div class="item-3"></div>
+        <div class="item-4"></div>
+      </div>
+      <div class="part2">
+        <h4>RECENTLY VIEWED...</h4>
+        <div class="item-1"></div>
+        <div class="item-2"></div>
+        <div class="item-3"></div>
+        <div class="item-4"></div>
+        <div class="item-5"></div>
+    </div>
+    <hr>
+    <div class="container3">
+      <div class="review1"></div>
+      <div class="review2"></div>
+      <div class="review3"></div>
+      <div class="review4"></div>
+      <div class="review5"></div>
+      <div class="review"></div>
+    </div>
+    <hr>
+    <div class="container4">
       <div class="sub-text">
         <h4>Subscribe to better deals</h4>
         <p>Get the latest news on bargains and discounts</p>
@@ -56,6 +82,7 @@
         </table>
       </div>
     </div>
+    
     <footer>
       
     </footer>
