--- a/psnq.html
+++ b/psnq.html
@@ -23,13 +23,13 @@
     <div class="container1">
       <div class="part1">
         <div class="main-img">
-          <img src="/img/09.jpg" alt="">
+          <img src="/img/bgsmall.png" alt="">
         </div>
         <div class="list-img">
-          <img src="" alt="">
-          <img src="" alt="">
-          <img src="" alt="">
-          <img src="" alt="">
+          <img src="/img/01.jpg" alt="">
+          <img src="/img/02.jpg" alt="">
+          <img src="/img/03.jpg" alt="">
+          <img src="/img/04.jpg" alt="">
         </div>
       </div>
       <div class="part2">
